<resources>
    <string name="app_name">Service</string>
    <string name="dateFormat">dd/MM/yyyy</string>
    <string name="save">Save</string>
    <!-- main fragment -->
    <string name="main_fragment_action_mode_title">Count: %1$d</string>
    <string name="idRepair">№:</string>
    <string name="beginDate">Принят:</string>
    <string name="defect">Дефект:</string>
    <string name="endDate">готов:</string>
    <string name="notes">Комментарий:</string>
    <string name="customer">владелец:</string>
    <!-- repair edit -->
    <string name="addNewRepair">Create new repair</string>
    <string name="repairDefect">Defect</string>
    <string name="repairStateReady">Ready</string>
    <string name="repairStateInWork">In Work</string>
    <string name="repairNote">Note</string>
    <string name="repairIssue">Give</string>
    <string name="repairId">#Order</string>
    <string name="repairSN">s/n</string>
    <string name="repairBegDate">Принят в ремонт:</string>
    <string name="repairCustomer">Владелец:</string>
    <string name="repairInputText">Input text</string>
    <string name="issueDate">Дата выдачи</string>
    <string name="returnBack">Return back to client?</string>
    <string name="deviceWithSN">Device and serial number \n %1$s\ns/n %2$s</string>
    <string name="repairState">Состояние</string>
    <string name="addNewRepairError">"Not all data entered.</string>
    <!-- add model -->
    <string name="enter_model">Enter model</string>
    <string name="addNewModel">Adding new model</string>
    <string name="queAddNewModel">Add %1$s in base?</string>
    <string name="addNewModelYes">Yes</string>
    <string name="addNewModelNo">No</string>
    <string name="addNewModelError">Shouldn\'t be empty and more than 5 characters.</string>
    <string name="enterModel">Select model</string>
    <!-- add customer -->
    <string name="enter_customer">Enter device owner</string>
    <string name="addNewCustomer">Adding new customer</string>
    <string name="queAddNewCustomer">Add %1$s in base?</string>
    <string name="addNewCustomerYes">Yes</string>
    <string name="addNewCustomerNo">No</string>
    <string name="addNewCustomerError">Shouldn\'t be empty and more than 3 characters.</string>
    <string name="enterCustomer">Select device owner</string>
    <!-- add repair -->
    <string name="choice_customer">Choice customer</string>
    <string name="choice_model">Choice model</string>
    <string name="enter_or_scan_s_n">Enter or scan S/N</string>
    <!-- del repair -->
    <string name="titleDelSelected">Delete selected</string>
    <string name="questDelSelected">Select %1$s repairs, delete?</string>
    <string name="addingRepair">Adding a repair</string>


</resources>
