<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/editRepairLayout">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/editRepairToolbar"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <EditText
            android:id="@+id/defectEditText"
            android:hint="@string/repair_defect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_6"/>
    <EditText
            android:id="@+id/noteEditText"
            android:hint="@string/repairNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_7"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            />

    <TextView
            android:text="@string/repairId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_1" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editRepairToolbar"/>

    <TextView
            android:text="@string/repairInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTextView" app:layout_constraintStart_toEndOf="@+id/textView_1"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView_1"/>
    <TextView
            android:text="@string/repairSN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_1"/>
    <TextView
            android:text="@string/repairInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serialNumberTextView" app:layout_constraintStart_toEndOf="@+id/textView_2"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView_2"/>
    <TextView
            android:text="@string/repairModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/repairInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modelTextView" app:layout_constraintStart_toEndOf="@+id/textView_3"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView_3"/>
    <TextView
            android:text="@string/repairBegDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_5"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/repairInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/begDateTextView"
            app:layout_constraintStart_toEndOf="@+id/textView_4"
            app:layout_constraintTop_toTopOf="@+id/textView_4"/>
    <TextView
            android:text="@string/repairCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_3"/>
    <TextView
            android:id="@+id/customerTextView"
            android:text="@string/repairInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView_5"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView_5"/>
    <TextView
            android:text="@string/repairInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stateTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView_4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/repairDefect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_6"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/stateTextView"/>
    <TextView
            android:text="@string/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_7" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/defectEditText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <Button
            android:id="@+id/repairStateButton"
            android:text="@string/repairState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/issueButton"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            tools:ignore="MissingConstraints" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/noteEditText"/>
    <Button
            android:id="@+id/issueButton"
            android:text="@string/repairIssue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/repairStateButton"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="@+id/repairStateButton"/>
    <Button
            android:id="@+id/saveRepairButton"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>