<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
            android:text="@string/idRepair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTextView" app:layout_constraintStart_toEndOf="@+id/textView_1"
            app:layout_constraintTop_toTopOf="@+id/textView_1"/>
    <TextView
            android:text="@string/beginDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_2"
            app:layout_constraintTop_toTopOf="@+id/idTextView" app:layout_constraintStart_toEndOf="@+id/idTextView"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/defect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_4"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/defectTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
    />
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/beginDateTextView"
            app:layout_constraintTop_toTopOf="@+id/textView_2" app:layout_constraintStart_toEndOf="@+id/textView_2"
    />
    <TextView
            android:text="@string/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_3"
            app:layout_constraintTop_toTopOf="@+id/beginDateTextView" app:layout_constraintStart_toEndOf="@+id/beginDateTextView"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endDateTextView" app:layout_constraintStart_toEndOf="@+id/textView_3"
            app:layout_constraintTop_toTopOf="@+id/textView_3"/>
    <TextView
            android:text="@string/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/defectTextView"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/notesTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_5"
    />
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customerTextView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/endDateTextView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_6" app:layout_constraintEnd_toStartOf="@+id/customerTextView"
            app:layout_constraintTop_toTopOf="@+id/customerTextView"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="parent"/>
    <TextView
            android:text="@string/issueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/notesTextView"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/issueTextView"
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView6"/>
</androidx.constraintlayout.widget.ConstraintLayout>